Verifica e depois ve o que podemos fazer ainda

--- a/src/main/resources/static/css/sb-admin.css
+++ b/src/main/resources/static/css/sb-admin.css
@@ -274,7 +274,10 @@ body.fixed-nav.sidebar-toggled #content-wrapper {
   }
 }
 
-
+:root {
+  --input-padding-x: 0.75rem;
+  --input-padding-y: 0.75rem;
+}
 
 .card-login {
   max-width: 25rem;
