--- a/src/main/resources/templates/cadastroVagas.html
+++ b/src/main/resources/templates/cadastroVagas.html
@@ -4,19 +4,22 @@
 
 
     <form class="inline" method="post" th:object='${vaga}'>
+        <!--TITULO DA VAGA-->
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">Titulo da Vaga</span>
             </div>
             <input type="text" class="form-control" aria-label="Sizing example input"  aria-describedby="inputGroup-sizing-default" th:field='*{ds_titulo}' >
         </div>
+        <!--AREA DE ATUAÇAO -->
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-default">Area de Atuação</span>
+                <span class="input-group-text" id="inputGroup-sizing-default">Area de Atuação</br> *Cod do Banco </span>
             </div>
             <input type="text" class="form-control" aria-label="Sizing example input"  aria-describedby="inputGroup-sizing-default" th:field='*{cd_area}' >
         </div>
 
+        <!--EMPRESA -->
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">Codigo da Empresa</br> *Cod do Banco (vai ser implementado com o Login da empresa Posteriormente)</span>
@@ -24,6 +27,7 @@
             <input type="text" class="form-control" aria-label="Sizing example input"  aria-describedby="inputGroup-sizing-default" th:field='*{cd_empresa}' >
         </div>
 
+        <--
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text">Descrição da Vaga</span>
