--- a/src/main/resources/templates/listaVaga.html
+++ b/src/main/resources/templates/listaVaga.html
@@ -7,11 +7,18 @@
         <div class="jumbotron">
 
             <h1 class="display-4" th:text="${vaga.ds_titulo}"></h1>
-            <p class="lead" th:text="${vaga.ds_vaga}">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <p class="lead" th:text="${vaga.ds_requisitos}">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
             <hr class="my-4">
-            <p th:text="${vaga.ds_requisitos}">It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Saber Mais</a>
-
+            <p th:text="${vaga.ds_vaga}" >It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <h1 th:text="${cd_vaga}"></h1>
+            <a class="btn btn-primary" data-toggle="collapse" th:href="${cd_vaga}" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Link with href
+            </a>
+            <div class="collapse" th:id="${cd_vaga}">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
         </div>
     </div>
 </div>
