--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,7 +12,9 @@
 
     <title>Estágio Search</title>
 
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!--<link rel="stylesheet" type="text/css" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}"/>-->
 
     <link rel="stylesheet" type="text/css" th:href="@{/vendor/fontawesome-free/css/all.min.css}"/>
 
@@ -159,9 +161,9 @@
 </div>
 
 
-<!-- Bootstrap Script-->
+<!-- Bootstrap Script
 <script type="text/javascript" th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-
+-->
 <!-- Jquery-->
 <script type="text/javascript" th:src="@{/vendor/jquery/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
@@ -169,20 +171,22 @@
 <!-- Page level plugin JavaScript-->
 <script type="text/javascript" th:src="@{/vendor/chart.js/Chart.min.js}"></script>
 
-<!-- Custom scripts for all pages-->
+<!-- Custom scripts for all pages
 <script type="text/javascript" th:src="@{/vendor/datatables/jquery.dataTables.js}"></script>
 <script type="text/javascript" th:src="@{/vendor/datatables/dataTables.bootstrap4.js}"></script>
-
+-->
 <!-- Custom scripts for all pages-->
 <script type="text/javascript" th:src="@{/js/sb-admin.min.js}"></script>
 
-<!-- Demo scripts for this page-->
+<!-- Demo scripts for this page
 <script type="text/javascript" th:src="@{/js/demo/datatables-demo.js}"></script>
 <script type="text/javascript" th:src="@{/js/demo/chart-area-demo.js}"></script>
+-->
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
 
