--- a/src/main/resources/templates/listaVaga.html
+++ b/src/main/resources/templates/listaVaga.html
@@ -20,6 +20,7 @@
             <div class="collapse" th:id="'col_' + ${vaga.cd_vaga}">
                 <div class="card card-body">
                     <p th:text="${vaga.ds_vaga}">Nada Informado</p>
+                    <button class="button btn-primary">Tenho Interesse</button>
 
                 </div>
             </div>
