--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,18 +4,16 @@
         <div class="col-sm-6">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="/vagas" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Lista de Vagas de Estágio Disponiveis</h5>
+                    <a href="/vagas" class="btn btn-primary">Ir para a página</a>
                 </div>
             </div>
         </div>
         <div sec:authorize="hasRole('EMPRESA')" class="col-sm-6">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="/vagas/cadastro" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Cadatro de Vagas de Estágio</h5>
+                    <a href="/vagas/cadastro" class="btn btn-primary">Ir para a página</a>
                 </div>
             </div>
         </div>
