--- a/src/main/resources/templates/cadastroEmpresa.html
+++ b/src/main/resources/templates/cadastroEmpresa.html
@@ -1,44 +1,55 @@
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org/">
 
-    <h2>Cadastro de Vaga</h2>
+    <h2>Cadastro de Empresa</h2>
 
 
-    <form class="inline" method="post" th:object='${vaga}'>
+    <form class="inline" method="post" th:object='${empresa}' th:action="@{/empresa/cadastro}">
+        <!--TITULO DA VAGA-->
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-default">Titulo da Vaga</span>
+                <span class="input-group-text" id="inputGroup-sizing-default">Razão Social</span>
             </div>
-            <input type="text" class="form-control" aria-label="Sizing example input"  aria-describedby="inputGroup-sizing-default" th:field='*{ds_titulo}' >
-        </div>
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-default">Area de Atuação</span>
-            </div>
-            <input type="text" class="form-control" aria-label="Sizing example input"  aria-describedby="inputGroup-sizing-default" th:field='*{cd_area}' >
-        </div>
-
-
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-default">Codigo da Empresa</br> *Cod do Banco (vai ser implementado com o Login da empresa Posteriormente)</span>
-            </div>
-            <input type="text" class="form-control" aria-label="Sizing example input"  aria-describedby="inputGroup-sizing-default" th:field='*{cd_empresa}' >
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"
+                   th:field='*{nm_razao}'>
         </div>
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-                <span class="input-group-text">Descrição da Vaga</span>
+                <span class="input-group-text" id="inputGroup-sizing-default">Nome Fantasia</span>
             </div>
-            <textarea class="form-control" aria-label="With textarea" th:field='*{ds_vaga}' ></textarea>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"
+                   th:field='*{nm_fantasia}'>
+        </div>
+
+        <!--AREA DE ATUAÇAO -->
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroup-sizing-default">Area de atuação</span>
+            </div>
+            <select id="pais" th:field="*{area}">
+                <option value="">Selecione a Area de atuação.</option>
+                <option th:each="area : ${areas}" th:value="${area.cd_area}" th:text="${area.ds_area}" selected="selected"></option>
+            </select>
         </div>
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-                <span class="input-group-text">Descrição dos requisitos</span>
+                <span class="input-group-text" id="inputGroup-sizing-default">Numero CNPJ</span>
             </div>
-            <textarea class="form-control" aria-label="With textarea" th:field='*{ds_requisitos}' ></textarea>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"
+                   th:field='*{nr_cnpj}'>
         </div>
-        <button type="submit"class="btn btn-success">Gravar</button>
+
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroup-sizing-default">Nome do Representante</span>
+            </div>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"
+                   th:field='*{nm_representante}'>
+        </div>
+
+
+        <button type="submit" class="btn btn-success">Gravar</button>
     </form>
 
 </div>
